Generate new build

--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="This is an assigment to fetch star wars characters"
-    />
+    <meta name="description" content="This is an assigment to fetch star wars characters" />
     <title>Star Wars</title>
-    <link rel="shortcut icon" href="./favicon.ico" />
-    <link href="./app.css" rel="stylesheet" />
-  </head>
-
+  <link rel="shortcut icon" href="favicon.ico"><link href="app.css" rel="stylesheet"></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
-    <script type="text/javascript" src="./app.js"></script>
-  </body>
+  <script type="text/javascript" src="app.js"></script></body>
 </html>
